# content-engine

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  metrics.yml  outreach.yml  palisade.yml  publish-queue.yml
_manual/: RUNBOOK.md  _extract.py  batch_enqueue.py  daily_run.ps1  discover.py  discover_batch.py  enqueue.py  outreach_devto_kimi_publish.py  outreach_discover.py  outreach_linkedin_kimi_run.py  outreach_publish.py  outreach_replies.json  outreach_targets.json  outreach_targets_devto.json  palisade_draft.json  palisade_manual.py  palisade_next.py  publish_manual.py  publish_queue.py  repo.json
_manual/_outreach_archive/: outreach_replies.json  outreach_targets.json  targets_round1.json
_manual/linkedin_page/: AGENTS.md  codex_last_message.txt  codex_run.ps1  codex_run_log.txt  post_log.txt  post_next.ps1  (+2 more)
config/: config.toml  palisade_guides.json
docs/: API_FINDINGS.md  ARCHITECTURE.md  CONTENT_STRATEGY.md  IMPLEMENTATION_PLAN.md  OUTREACH.md  RUNBOOK.md
spikes/: README.md  github_search_spike.py  publisher_smoke.py
tests/: conftest.py  test_config.py  test_dedup.py  test_engagement.py  test_github_source.py  test_github_trending.py  test_http_retry.py  test_logging.py  test_metrics.py  test_model_client.py  test_outreach.py  test_outreach_devto.py  test_outreach_linkedin.py  test_outreach_manual.py  test_palisade.py  test_pipeline.py  test_post_images.py  test_prompts.py  test_publish_queue_image.py  test_publisher_dryrun.py  test_quality.py  test_ranking.py  test_reviewer_parsing.py
(+114 files in other folders)
